--- a/LoginAndRegister/nbproject/project.properties
+++ b/LoginAndRegister/nbproject/project.properties
@@ -29,14 +29,20 @@ dist.jar=${dist.dir}/LoginAndRegister.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.AbsoluteLayout.jar=C:\\Users\\alex2\\Documents\\GitHub\\COSC350\\OO_Restaurant\\dist\\lib\\AbsoluteLayout.jar
+file.reference.JTattoo-1.6.11.jar=C:\\Users\\alex2\\Documents\\Cosc 457\\Final Project\\JTattoo-1.6.11.jar
 file.reference.mysql-connector-java-8.0.11.jar=C:\\Users\\alex2\\Documents\\Cosc 457\\mysql-connector-java-8.0.11.jar
+file.reference.OO_Restaurant.jar=C:\\Users\\alex2\\Documents\\GitHub\\COSC350\\OO_Restaurant\\dist\\OO_Restaurant.jar
 file.reference.swingx-all-1.6.4.jar=C:\\Program Files\\NetBeans 8.2\\ide\\modules\\ext\\swingx-all-1.6.4.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.mysql-connector-java-8.0.11.zip}:\
-    ${file.reference.mysql-connector-java-8.0.11.jar}
+    ${file.reference.mysql-connector-java-8.0.11.jar}:\
+    ${file.reference.JTattoo-1.6.11.jar}:\
+    ${file.reference.OO_Restaurant.jar}:\
+    ${file.reference.AbsoluteLayout.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
